--- a/lessons/Part1.Rmd
+++ b/lessons/Part1.Rmd
@@ -110,6 +110,10 @@ A pipe operator `|>` is a method of chaining together functions. A pipe
 takes what is on the left-hand side of the pipe and makes it the first
 argument of the function on the right-hand side by default.
 
+⚠️ You may have seen the `%>%` pipe operator, which does the same thing
+as `|>`. The difference is that `%>%` comes from the `tidyverse` package
+while `|>` has more recently been introduced to base R.
+
 ```{r, eval = F}
 ## Pseudo code 
 x |> f(y) 
@@ -159,13 +163,12 @@ View(animals)
 Suppose we are interested in looking at animal rescues from 2018-2020.
 `filter()` allows us to subset observations based on their value.
 
-Since we are introducing a verb explicitly for the first time, we will
-show the verb with and without pipes. The API is the same for every
-verb.
+Since we are introducing a function explicitly for the first time, we
+will show the function with and without pipes.
 
 ```{r}
 ## Get all observations from the Year 2015 
-filter(animals, Year == 2015)
+filter(animals, Year == 2015) 
 
 ## Get all observations from 2018-2020 
 filter(animals, Year >= 2018 & Year <=2020)
@@ -194,25 +197,26 @@ As with the examples we have seen before, we take the animals data frame
 and then pass it via the pipe to the filter argument. Because the pipe
 puts the data frame as the first argument for every tidyverse function,
 we only have to specify the subsequent arguments. `between()` is a
-`dplyr` function that is a shortcut for x \>= left & x \<= right where x
+`dplyr` function that is a shortcut for `x >= left & x <= right` where x
 is our variable of interest.
 
 Note that `between()` will not work if you want to exclude an endpoint.
 
-You can extend filter() with logical conditions:
+You can extend `filter()` with logical conditions:
 
-| Symbol | Meaning                  |
-|--------|--------------------------|
-| \<     | less than                |
-| \>     | greater than             |
-| ==     | equal to                 |
-| \<=    | less than or equal to    |
-| \>=    | greater than or equal to |
-| !=     | not equal to             |
-| %in%   | group membership         |
-| is.na  | is NA                    |
-| !is.na | is not NA                |
-| &,     | , !, xor, any, all       |
+| Symbol | Meaning                                |
+|--------|----------------------------------------|
+| \<     | less than                              |
+| \>     | greater than                           |
+| ==     | equal to                               |
+| \<=    | less than or equal to                  |
+| \>=    | greater than or equal to               |
+| !=     | not equal to                           |
+| %in%   | group membership                       |
+| is.na  | is NA                                  |
+| !is.na | is not NA                              |
+| &,     | and - both/all conditions must be true |
+| \|     | or - either/any conditions can be true |
 
 ## Challenge 2
 
@@ -302,12 +306,21 @@ When using `select` and `filter` together, the order of operations is
 very important. If we used `select()` first, the `filter()` function can
 only filter on variables that we selected.
 
-We can also select observation variables using: - variable indices -
-variable names (without quotes) - `x:z` to select all variables between
-x and z - `-y` to *exclude* y - `starts_with(x, ignore.case = TRUE)`:
-all names that starts with `x` - `ends_with(x, ignore.case = TRUE)`: all
-names that ends with `x` - `contains(x, ignore.case = TRUE)`: all names
-that contain `x`
+We can also select observation variables using:
+
+-   variable indices
+
+-   variable names (without quotes)
+
+-   `x:z` to select all variables between x and z
+
+-   `-y` to *exclude* y
+
+-   `starts_with(x, ignore.case = TRUE)`: all names that starts with `x`
+
+-   `ends_with(x, ignore.case = TRUE)`: all names that ends with `x`
+
+-   `contains(x, ignore.case = TRUE)`: all names that contain `x`
 
 ## Split-Apply-Combine
 
@@ -329,12 +342,14 @@ and a cornerstone of the dplyr approach.
 
 A `grouped_df` can be thought of as a `list` where each item in the
 `list` is a `data.frame` containing only the rows that correspond to the
-particular value `continent` (at least in the example above).
+particular value, for example London boroughs.
+
+**Diagram: illustrates the code `df %>% group_by(a)`**
 
 ![](../images/dplyr-fig2.png)
 
 Let's demonstrate the benefits of `group_by` by answering the question,
-"What are total number of cat rescues for each borough?"
+"What are the total number of cat rescues for each borough?"
 
 ```{r}
 borough_cat_rescues <- animals |> 
@@ -343,7 +358,7 @@ borough_cat_rescues <- animals |>
   ## get just the observations of cat rescues 
   filter(Type == "Cat") |>
   ## new function! count the unique values of one or more variables
-  count(Type)
+  count(Type) 
 
 head(borough_cat_rescues)
 ```
@@ -381,8 +396,8 @@ borough_cat_rescues |>
 
 ## Challenge 3
 
-Let's put the verbs we've learned so far into action all at once. Answer
-the question "What are the total number of dog rescues for each
+Let's put the functions we've learned so far into action all at once.
+Answer the question "What are the total number of dog rescues for each
 borough?" by making a data frame called `borough_dog_rescues` and
 arranging the rows by borough in alphabetical order.
 
@@ -405,10 +420,14 @@ animals |>
 ```
 
 `summarise()` becomes extremely useful when paired with `group_by()`. We
-just saw that our last block gave the average cost across our data set.
-By using the `group_by()` function, we split our original data frame
-into multiple pieces, which we then use to run functions (e.g. `mean()`)
+just saw that our last block gave the average cost across our data set,
+but what if wanted to calculate the average cost by borough? By using
+the `group_by()` function, we split our original data frame into
+multiple pieces, which we then use to run functions (e.g. `mean()`)
 within `summarize()`.
+
+**Diagram: illustrates the code
+`df %>% group_by(a) %>% summarize(mean_b = mean(b))`**
 
 ![](../images/dplyr-fig3.png)
 
@@ -424,7 +443,7 @@ animals |>
 
 We are not limited to grouping by just one variable. We can group by
 multiple variables. Let's answer the question, "What's the average cost
-by borough year?"
+by borough and year?"
 
 ```{r}
 animals |> 
@@ -436,7 +455,7 @@ animals |>
 
 That is already quite powerful, but it gets even better! We are not
 limited to defining one new variable in `summarize()`. Suppose we want
-to know the average deviation within each borough year.
+to know the average deviation within each borough and year.
 
 ```{r}
 animals |> 
@@ -464,9 +483,9 @@ animals |>
 
 ## Challenge 4
 
-Create a data frame that considers the average rescue cost, median
-rescue cost, and standard deviation for bird rescues for each property
-category year. Save the result of your workflow into a data frame object
+Create a data frame that contains the average rescue cost, median rescue
+cost, and standard deviation for bird rescues for each property category
+and year. Save the result of your workflow into a data frame object
 called `bird_stats`
 
 ```{r, include=F}
@@ -476,7 +495,7 @@ called `bird_stats`
 
 ## mutate()
 
-`mutate()` creates new variables to the same data frame that you pass
+`mutate()` creates new variables in the same data frame that you pass
 into it.
 
 Here's an example:
@@ -520,7 +539,7 @@ food_df |>
 
 To demonstrate the power of `mutate()` and `group_by()`, load the
 `gapminder-FiveYearData.csv` into RStudio as a data frame object called
-gapminder
+gapminder.
 
 ```{r}
 gapminder <- read_csv(here("data/gapminder-FiveYearData.csv"), show_col_types = FALSE)
@@ -558,8 +577,9 @@ gap_mutate_no_group <- gapminder |>
 ```
 
 A final useful function to know is the how-to count observations within
-a mutate. `dplyr` provides the handy `n()` function for this
-computation. Here's an example.
+a group and store them to a new variable using `mutate`. `dplyr`
+provides the handy `n()` function for this computation. Here's an
+example.
 
 ```{r}
 gap_count <- gapminder |> 
@@ -576,9 +596,9 @@ gap_count <- gapminder |>
 ## Challenge 5
 
 Add a column to the gapminder dataset that contains the continent's
-total population of each observation in a given year. For example, if
-the first observation was Afghanistan in 1952, the new column would
-contain the population of Asia in 1952.
+total population for that country in a given year. For example, if the
+first observation was Afghanistan in 1952, the new column would contain
+the population of Asia in 1952.
 
 ```{r, include=F}
 #YOUR CODE HERE
@@ -587,11 +607,15 @@ contain the population of Asia in 1952.
 
 ## Challenge 6
 
-Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the
-difference between the observation's `gdpPercap` and the mean
-`gdpPercap` of the continent in that year, (b) arrange the data frame by
-the column you just created, in descending order (so that the relatively
-richest country/years are listed first)
+Use dplyr to:
+
+1.  add a column called `gdpPercap_diff` that contains the difference
+    between the observation's `gdpPercap` and the mean `gdpPercap` of
+    the continent in that year
+
+2.  arrange the data frame by the column you just created, in descending
+    order (so that the relatively richest country/years are listed
+    first)
 
 ```{r, include=F}
 #YOUR CODE HERE
@@ -630,10 +654,10 @@ head(gap_long)
 
 Notice that we put three arguments into the `pivot_longer` function:
 
-1.  We want to gather the column indices of the old observation
-    variables (`3:38`, signaling columns 3 through 38) into one
-    variable. Notice that we want to keep columns 1 and 2, as these are
-    considered "ID" variables.
+1.  `cols` = the columns that we want to gather into a single column
+    (`3:38`, signaling columns 3 through 38) into one variable. Notice
+    that we want to keep columns 1 and 2, as these are considered "ID"
+    variables.
 
 An alternative way to do indices is to type in the column names of
 interest explicitly. Here is an example where we exclude the first two
@@ -649,9 +673,11 @@ make_Long <- gap_wide |>
 head(make_Long)
 ```
 
-2.  the name of the new column for the new ID variable (`obstype_year`),
+2.  `names_to` = the name of the new column for the new ID variable
+    (`obstype_year`),
 
-3.  the name for the new amalgamated observation variable (`obs_value`)
+3.  `values_to` = the name for the new amalgamated observation variable
+    (`obs_value`)
 
 Alternatively, we can use the column structure in the `gap_wide` data
 frame to do the same thing with the `starts_with` function.
@@ -704,4 +730,25 @@ gap_original <- gap_long_sep |>
     names_from = obs_type, 
     values_from = obs_values)
 head(gap_original)
+```
+
+Above we went from `gap_wide` to `gap_long` to `gap_original`. Could we
+have gone from `gap_wide` to `gap_original`? Rather than lengthening
+columns 3:38 into one column and then widening them into four columns,
+we can use the fact that they're named in an informative way to lengthen
+them into four columns: year, lifeExp, pop, and gdpPercap .
+
+```{r}
+
+# look at the documentation for pivot_longer for the argument names_to
+?pivot_longer
+
+gap_wide |> 
+  pivot_longer(
+    cols = 3:38, 
+    names_to = c(".value", "year"),
+    names_sep = "_"
+  )
+
+
 ```
